<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:title="@string/settings_search_settings">

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_diaog_choose_number"
            android:entries="@array/entryvalues_list_preference_numbers"
            android:entryValues="@array/entryvalues_list_preference_numbers"
            android:key="num_of_images"
            android:summary="@string/settings_images_number"
            android:title="@string/settings_images" />

        <ListPreference
            android:defaultValue="1"
            android:dialogTitle="@string/settings_diaog_choose_number"
            android:entries="@array/entryvalues_list_preference_numbers"
            android:entryValues="@array/entryvalues_list_preference_numbers"
            android:key="num_of_suggestions"
            android:summary="@string/settings_suggestions_number"
            android:title="@string/settings_images_suggestions" />

        <SwitchPreference
            android:defaultValue="false"
            android:key="custom_server"
            android:title="@string/settings_local_server" />

        <EditTextPreference
            android:defaultValue="http://10.0.0.5"
            android:dependency="custom_server"
            android:dialogTitle="Type a URL"
            android:key="custom_server_url"
            android:summary="@string/settings_local_server_url"
            android:title="@string/settings_local_server_title" />

    </PreferenceCategory>

    <PreferenceCategory
        android:key="category_custom_search_providers"
        android:title="@string/settings_search_providers">

        <SwitchPreference
            android:defaultValue="false"
            android:key="custom_search_providers"
            android:title="@string/settings_search_providers_title" />


    </PreferenceCategory>

    <PreferenceCategory
        android:title="@string/settings_about">

        <Preference
            android:key="version"
            android:title="@string/settings_version">
        </Preference>

        <Preference
            android:title="@string/settings_about_view_source_code"
            android:summary="@string/settings_about_site">
                <intent android:action="android.intent.action.VIEW"
                    android:data="@string/settings_about_site" />
        </Preference>

    </PreferenceCategory>

</PreferenceScreen>